--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,15 @@ black==23.10.1
 click==8.1.7
 colorama==0.4.6
 flake8==6.1.0
+ghp-import==2.1.0
 iniconfig==2.0.0
+Jinja2==3.1.2
+Markdown==3.5.1
+MarkupSafe==2.1.3
 mccabe==0.7.0
+mergedeep==1.3.4
+mkdocs==1.5.3
+mock==5.1.0
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
@@ -12,3 +19,8 @@ pluggy==1.3.0
 pycodestyle==2.11.1
 pyflakes==3.1.0
 pytest==7.4.3
+python-dateutil==2.8.2
+PyYAML==6.0.1
+pyyaml_env_tag==0.1
+six==1.16.0
+watchdog==3.0.0
