--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,34 @@
 black==23.10.1
+cachetools==5.3.2
+chardet==5.2.0
 click==8.1.7
 colorama==0.4.6
-flake8==6.1.0
+cssutils==2.9.0
+distlib==0.3.7
+exceptiongroup==1.1.3
+filelock==3.13.1
+ghp-import==2.1.0
+importlib-metadata==6.8.0
 iniconfig==2.0.0
-mccabe==0.7.0
+Jinja2==3.1.2
+Markdown==3.5
+MarkupSafe==2.1.3
+mergedeep==1.3.4
+mkdocs==1.5.3
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
 platformdirs==3.11.0
 pluggy==1.3.0
-pycodestyle==2.11.1
-pyflakes==3.1.0
+pyproject-api==1.6.1
 pytest==7.4.3
+python-dateutil==2.8.2
+PyYAML==6.0.1
+pyyaml-env-tag==0.1
+six==1.16.0
+tomli==2.0.1
+tox==4.11.3
+typing-extensions==4.8.0
+virtualenv==20.24.6
+watchdog==3.0.0
+zipp==3.17.0
