--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
+attrs==23.1.0
+Babel==2.13.1
 black==23.10.1
 cachetools==5.3.2
+certifi==2023.11.17
 chardet==5.2.0
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-flake8==6.1.0
-ghp-import==2.1.0
 cssutils==2.9.0
 distlib==0.3.7
 exceptiongroup==1.1.3
 filelock==3.13.1
+flake8==6.1.0
+ghp-import==2.1.0
+griffe==0.38.0
+hypothesis==6.89.0
+idna==3.4
 importlib-metadata==6.8.0
 iniconfig==2.0.0
 Jinja2==3.1.2
@@ -17,22 +24,37 @@ MarkupSafe==2.1.3
 mccabe==0.7.0
 mergedeep==1.3.4
 mkdocs==1.5.3
+mkdocs-autorefs==0.5.0
 mkdocs-material==9.4.9
+mkdocs-material-extensions==1.3
 mkdocstrings==0.24.0
 mkdocstrings-python==1.7.4
 mock==5.1.0
 mypy-extensions==1.0.0
 packaging==23.2
+paginate==0.5.6
 pathspec==0.11.2
 platformdirs==3.11.0
 pluggy==1.3.0
 pycodestyle==2.11.1
 pyflakes==3.1.0
-pytest==7.4.3
-setuptools~=65.5.1
-python-dateutil==2.8.2
-PyYAML==6.0.1
-pyyaml_env_tag==0.1
-six==1.16.0
-watchdog==3.0.0
+Pygments==2.16.1
+pymdown-extensions==10.4
 pyproject-api==1.6.1
+pytest==7.4.3
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+pyyaml-env-tag==0.1
+regex==2023.10.3
+requests==2.31.0
+setuptools==65.5.1
+six==1.16.0
+sortedcontainers==2.4.0
+tomli==2.0.1
+tox==4.11.3
+typing-extensions==4.8.0
+urllib3==2.1.0
+virtualenv==20.24.6
+watchdog==3.0.0
+zipp==3.17.0
